Release Notes

Release 4.0.0

     * Replace autoconf with cmake
     * Remove table stats monitoring, use pgstat instead
     * Remove index stats monitoring, use pgstat instead
     * Remove kill and renice command, and stop displaying nice priority
     * Show backend state instead of operating system state

Release 3.7.0

     * Added support for monitoring databases on remote systems.
     * Added support for monitoring i/o statistics on Linux.
     * Updated for changed introduced in PostgreSQL 9.2.
     * Updated for OpenBSD 5.2.
     * Updated for FreeBSD 9.1.
     * Updated for OS X Mountain Lion (10.8).
     * Add monitoring for database activity
     * Add monitoring for disk activity
     * Add monitoring for disk space
     * Add long options

Release 3.6.2

Changes

     * Add 'A' command to re-run SQL statement and show actual execution plan
       (EXPLAIN ANALYZE) of a running query.
     * Fixed 'E' command (EXPLAIN) to be UPDATE and INSERT safe.
     * Updated the automake file so other targets like 'make dist' and
       'make distdir' work.
     * Fixed a bug so user table statistics can be sorted.
     * Added a 't' command so that user table and index statistics can
       display either cumulative or differential statistics.
     * Fixed support for OS X, tested on v10.4.x, v10.5.x.
     * Added support for OpenBSD, tested on v4.2.
     * Rename 'ptop' to 'pg_top' to fit PostgreSQL naming conventions and
       avoid naming conflict with free pascal's source formatter 'ptop'.
     * Recognize PGDATABASE, PGHOST, PGUSER, and PGPORT environment variables.

Release 3.6.1

Changes
     * Add -h command line option to specify a socket file when connected to
       the database..
     * Use the same -p PORT, -U USER, and -d DBNAME options as other PostgreSQL
       programs.
     * Change unixtop's original -d to -x, and -U to -z.
     * Add 'X' command to view user index statistics.
     * Add 'R' command to view user table statistics.