@@ -88,14 +88,6 @@ pg_top is running from.
 .I pg_top
 will monitor a remote database if it has the pg_proctab extension installed.
 .TP
-.B \-u, \-\-show-uid
-Do not take the time to map uid numbers to usernames.  Normally,
-.I pg_top
-will read as much of the file \*(lq/etc/passwd\*(rq as is necessary to map
-all the user id numbers it encounters into login names.  This option
-disables all that, while possibly decreasing execution time.  The uid
-numbers are displayed instead of the names.
-.TP
 .B \-V, \-\-version
 Write version number information to stderr then exit immediately.
 No other processing takes place when this option is used.  To see current
@@ -127,8 +119,7 @@ is set.  The default is 1 for dumb terminals.
 \fB\-z \fR\fB\fIUSERNAME\fR\fR, \fB\-\-show-username=\fR\fB\fIUSERNAME\fR\fR
 Show only those processes owned by
 .IR USERNAME .
-This option currently only accepts usernames and will not understand
-uid numbers.
+This option currently only accepts usernames.
 .TP
 \fB\-h \fR\fB\fIHOST\fR\fR, \fB\-\-host=\fR\fB\fIHOST\fR\fR
 Specifies the host name of the machine on which the server is running. If
