@@ -7,6 +7,7 @@ Release 4.0.0
      * Remove index stats monitoring, use pgstat instead
      * Remove kill and renice command, and stop displaying nice priority
      * Show backend state instead of operating system state
+     * Show database username instead of operating system username
 
 Release 3.7.0
 
